# GenealogicalTreeCore

./: .gitignore  CMakeLists.txt  README.md
optimize/: README.md
src/: CMakeLists.txt  README.md  id.h  main.cpp
template/: CMakeLists.txt  README.md  version.h.in  version_hardcoded.h.in
